improve build process

--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run css && npm run kss && npm run copy-files",
+    "build": "node build && npm run kss && npm run copy-files",
     "copy-files": "node build/copyFiles.js",
-    "css": "lessc kss/dlx.less kss/dlx.css --clean-css --rewrite-urls=all",
     "kss": "./node_modules/.bin/kss --config kss.config.json",
     "upload": "node build/upload.js"
   },
@@ -38,6 +37,7 @@
     "eslint": "^5.15.3",
     "feather-icons": "^4.9.0",
     "flexbox-reset": "^2.4.0",
+    "fs-extra": "^7.0.1",
     "kss": "^3.0.0-beta.23",
     "less": "^3.9.0",
     "less-plugin-clean-css": "^1.5.1",
