DEV: add prepare script to package.json (#125)
closes #125

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "node build && npm run kss && npm run copy-files",
     "copy-files": "node build/copyFiles.js",
     "kss": "./node_modules/.bin/kss --config kss.config.json",
+    "prepare": "npm run build",
     "upload": "node build/upload.js"
   },
   "dependencies": {},
