new upload script in progress

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,8 @@
-# ESLint v5.15.2
+# ESLint v5.16.0
 parserOptions:
   ecmaVersion: 10
   ecmaFeatures:
     impliedStrict: true
-  sourceType: module
 env:
   browser: true
   es6:     true
@@ -324,6 +323,7 @@ rules:
   - ignoreEOLComments: true
     exceptions:
       AssignmentExpression: true
+      AssignmentPattern: true
       IfStatement: true
       ImportDeclaration: true
       ImportSpecifier: true
