NEW: CSS versions of styles (#142)

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "node": "12.x"
   },
   "scripts": {
-    "build": "node build && npm run kss && npm run copy-files",
-    "copy-files": "node build/copyFiles.js",
-    "kss": "./node_modules/.bin/kss --config kss.config.json",
-    "prepare": "npm run build",
-    "upload": "node build/upload.js"
+    "build":      "npm run build-css && npm run build-docs",
+    "build-css":  "node build/buildCSS.js",
+    "build-docs": "node build/clearDocs.js && npm run kss && node build/copyFiles.js",
+    "kss":        "./node_modules/.bin/kss --config kss.config.json",
+    "upload":     "node build/upload.js"
   },
   "devDependencies": {
     "@azure/storage-blob": "^10.5.0",
