--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "feather-icons": "^4.28.0",
     "flexbox-reset": "^3.0.0",
     "fs-extra": "^9.0.1",
-    "kss": "^3.0.0-beta.25",
+    "kss": "^3.0.1",
     "less": "^3.10.3",
     "less-plugin-clean-css": "^1.5.1",
     "michelangelo": "^0.8.0",
