--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "build": "npm run build-css && npm run build-docs",
     "build-css": "node build/buildCSS.js",
     "build-docs": "node build/clearDocs.js && npm run kss && node build/copyFiles.js",
-    "kss": "./node_modules/.bin/kss --config kss.config.json",
-    "upload": "node build/upload.js"
+    "kss": "./node_modules/.bin/kss --config kss.config.json"
   },
   "devDependencies": {
     "@azure/storage-blob": "^10.5.0",
