--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,17 +6,17 @@ on:
 
 jobs:
 
-  publish-npm:
+  publish:
     runs-on: ubuntu-latest
     steps:
 
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: set up Node
+      - name: set up Node for npm
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: '12.x'
           registry-url: https://registry.npmjs.org/
 
       - name: install dependencies
@@ -30,25 +30,12 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  publish-gpr:
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: set up Node
+      - name: set up Node for GitHub
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: '12.x'
           registry-url: https://npm.pkg.github.com/
           scope:        '@digitallinguistics'
-
-      - name: install dependencies
-        run:  npm ci
-
-      - name: build
-        run:  npm run build
 
       - name: publish to GitHub Packages
         run:  npm publish
