adjust path to readme
closes #155

--- a/kss.config.json
+++ b/kss.config.json
@@ -7,7 +7,7 @@
     "./img"
   ],
   "destination": "docs/",
-  "homepage": "../README.md",
+  "homepage": "./README.md",
   "builder": "./node_modules/michelangelo/kss_styleguide/custom-template/",
   "css": [
     "./dlx.css",
