DEV: publish to GH pages on release (#150)
closes #150

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,3 +41,10 @@ jobs:
         run:  npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          cname:        styles.digitallinguistics.io
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir:  ./docs
