--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
+# OS generated files
+.DS_Store
+.DS_Store?
+
 # Custom
 Thumbs.db
 credentials.js
