--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "access": "public"
   },
   "engines": {
-    "node": "12.x"
+    "node": ">=12.x"
   },
   "scripts": {
     "build": "npm run build-css && npm run build-docs",
