--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "type": "module",
   "scripts": {
     "prebuild": "node build/emptyDocs.js",
-    "build": "kss --config kss.config.json & lessc components/components.less docs/components.css & lessc fonts/fonts.less docs/fonts.css",
-    "postbuild": "node build/copyFiles.js"
+    "build": "kss --config kss/kss.config.json & npm run build-less",
+    "postbuild": "node build/copyFiles.js",
+    "build-less": "lessc --include-path=components dlx.less docs/dlx.css & lessc kss/docs.less docs/docs.css"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
