--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
   },
   "type": "module",
   "scripts": {
-    "prebuild": "node build/emptyDocs.js",
-    "build": "kss --config kss/kss.config.json & npm run build-less",
-    "postbuild": "node build/copyFiles.js",
-    "build-less": "lessc --include-path=components dlx.less docs/dlx.css & lessc kss/docs.less docs/docs.css"
+    "build": "npm run build-css & npm run build-docs",
+    "build-css": "node build/buildCSS.js",
+    "prebuild-docs": "node build/emptyDocs.js",
+    "build-docs": "kss --config kss/kss.config.json & lessc --include-path=components dlx.less docs/dlx.css & lessc kss/docs.less docs/docs.css",
+    "postbuild-docs": "node build/copyFiles.js"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
     "fs-extra": "^9.1.0",
     "kss": "^3.0.1",
+    "less": "^4.1.1",
     "michelangelo": "^0.8.0",
+    "ora": "^5.3.0",
+    "recursive-readdir": "^2.2.2",
     "stylelint": "^13.12.0"
   }
 }
