--- a/kss/kss.config.json
+++ b/kss/kss.config.json
@@ -8,7 +8,7 @@
   "homepage":    "../README.md",
   "source":      [
     "../components",
-    "../fonts"
+    "../typography"
   ],
   "title": "DLx Pattern Library"
 }
