--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,14 +18,15 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: install dependencies
-        run:  npm ci
-
       - name: cache dependencies
         uses: actions/cache@v2
         with:
           path: ~/.npm
           key:  ${{ hashFiles('**/package-lock.json') }}
+
+      - name: install dependencies
+        if:   steps.cache.outputs.cache-hit != 'true'
+        run:  npm ci
 
       - name: publish to npm
         run:  npm publish
