--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "postbuild-docs": "node build/copyFiles.js"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "fs-extra": "^10.0.0",
+    "@digitallinguistics/eslint-config": "^0.1.0",
+    "@digitallinguistics/stylelint-config": "^0.1.2",
+    "eslint": "^8.16.0",
+    "fs-extra": "^10.1.0",
     "kss": "^3.0.1",
-    "less": "^4.1.1",
+    "less": "^4.1.2",
     "michelangelo": "^0.8.0",
-    "ora": "^6.0.0",
+    "ora": "^6.1.0",
     "recursive-readdir": "^2.2.2",
-    "stylelint": "^13.13.1"
+    "stylelint": "^14.8.3"
   }
 }
