--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "access": "public"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": ">=16.x"
   },
   "type": "module",
   "files": [
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@digitallinguistics/eslint-config": "^0.1.0",
     "@digitallinguistics/stylelint-config": "^0.1.2",
+    "clean-css": "^5.3.0",
     "eslint": "^8.16.0",
     "fs-extra": "^10.1.0",
     "kss": "^3.0.1",
