--- a/package.json
+++ b/package.json
@@ -2,38 +2,17 @@
   "name": "@digitallinguistics/styles",
   "version": "3.1.1",
   "description": "A collection of patterns for styling linguistic data on the web",
-  "homepage": "https://github.com/digitallinguistics/styles",
+  "homepage": "https://styles.digitallinguistics.com",
   "bugs": "https://github.com/digitallinguistics/styles/issues",
   "license": "ISC",
   "author": {
     "name": "Daniel W. Hieber",
     "url": "https://danielhieber.com"
   },
-  "repository": "https://github.com/digitallinguistics/styles.git",
+  "repository": "github:digitallinguistics/styles",
   "publishConfig": {
     "access": "public"
   },
-  "engines": {
-    "node": ">=16.x"
-  },
   "type": "module",
-  "scripts": {
-    "build": "npm run build-css & npm run build-docs",
-    "build-css": "node build/buildCSS.js",
-    "prebuild-docs": "node build/emptyDocs.js",
-    "build-docs": "kss --config kss/kss.config.json & lessc --include-path=components dlx.less docs/dlx.css & lessc kss/docs.less docs/docs.css",
-    "postbuild-docs": "node build/copyFiles.js"
-  },
-  "devDependencies": {
-    "@digitallinguistics/eslint-config": "^0.3.0",
-    "@digitallinguistics/stylelint-config": "^0.1.2",
-    "clean-css": "^5.3.3",
-    "eslint": "^8.57.0",
-    "fs-extra": "^11.2.0",
-    "kss": "^3.1.0",
-    "less": "^4.2.0",
-    "michelangelo": "^0.8.0",
-    "recursive-readdir": "^2.2.3",
-    "stylelint": "^16.2.1"
-  }
+  "scripts": {}
 }
