--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "access": "public"
   },
   "type": "module",
-  "scripts": {}
+  "scripts": {
+    "build": "node build/index.js"
+  },
+  "devDependencies": {
+    "@digitallinguistics/eslint-config": "^0.5.3",
+    "@eslint/js": "^9.12.0",
+    "@stylistic/eslint-plugin-js": "^2.9.0",
+    "esbuild": "0.24.0",
+    "eslint": "^9.12.0"
+  }
 }
