--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin-js": "^2.9.0",
     "esbuild": "0.24.0",
-    "eslint": "^9.12.0"
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0",
+    "handlebars": "^4.7.8"
   }
 }
