--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "build": "node build/index.js"
   },
   "devDependencies": {
+    "@11ty/eleventy": "3.0.0",
     "@digitallinguistics/eslint-config": "^0.5.3",
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin-js": "^2.9.0",
     "esbuild": "0.24.0",
     "eslint": "^9.12.0",
+    "fs-extra": "^11.2.0",
     "globals": "^15.11.0",
     "handlebars": "^4.7.8"
   }
