--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9.12.0",
     "fs-extra": "^11.2.0",
     "globals": "^15.11.0",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "html-minifier": "^4.0.0"
   }
 }
