--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
   },
   "type": "module",
   "scripts": {
-    "build": "node build/index.js"
+    "build": "node build/index.js",
+    "start": "eleventy --serve --config=build/docs/.eleventy.js"
   },
   "devDependencies": {
     "@11ty/eleventy": "3.0.0",
+    "@11ty/eleventy-navigation": "^0.3.5",
     "@digitallinguistics/eslint-config": "^0.5.3",
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin-js": "^2.9.0",
+    "change-case": "^5.4.4",
     "esbuild": "0.24.0",
     "eslint": "^9.12.0",
     "fs-extra": "^11.2.0",
     "globals": "^15.11.0",
     "handlebars": "^4.7.8",
-    "html-minifier": "^4.0.0"
+    "html-minifier": "^4.0.0",
+    "svgstore": "^3.0.1"
   }
 }
