--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@11ty/eleventy": "3.0.0",
     "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@digitallinguistics/eslint-config": "^0.5.3",
     "@eslint/js": "^9.12.0",
     "@stylistic/eslint-plugin-js": "^2.9.0",
