--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stylistic/eslint-plugin-js": "^2.9.0",
     "change-case": "^5.4.4",
     "esbuild": "0.24.0",
+    "esbuild-plugin-less": "^1.3.10",
     "eslint": "^9.12.0",
     "fs-extra": "^11.2.0",
     "globals": "^15.11.0",
